--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ env:
 gemfile:
   - gemfiles/rails.5.0.activerecord.gemfile
   - gemfiles/rails.5.1.activerecord.gemfile
+  - gemfiles/rails.5.2.activerecord.gemfile
+  - gemfiles/rails.6.0.activerecord.gemfile
   - gemfiles/rails.5.0.mongoid.6.1.gemfile
   - gemfiles/rails.5.1.mongoid.6.3.gemfile
   - gemfiles/sequel.4.45.gemfile
@@ -32,12 +34,16 @@ matrix:
   - rvm: 2.3.6
     gemfile: gemfiles/rails.4.2.mongoid.5.2.gemfile
     env: ES_VERSION=2.4.6
-  - rvm: 2.5.1
+  - rvm: 2.6.6
     gemfile: gemfiles/rails.5.2.activerecord.gemfile
-    env: ES_VERSION=5.6.7
+    env: ES_VERSION=7.9.1
+  - rvm: 2.6.6
+    gemfile: gemfiles/rails.6.0.activerecord.gemfile
+    env: ES_VERSION=7.9.1
 before_install:
   - curl -s https://download.elasticsearch.org/elasticsearch/release/org/elasticsearch/distribution/tar/elasticsearch/2.4.6/elasticsearch-2.4.6.tar.gz | tar xz -C /tmp
   - curl -s https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.6.7.tar.gz | tar xz -C /tmp
+  - curl -s https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-7.9.1-linux-x86_64.tar.gz | tar xz -C /tmp
 before_script:
   - /tmp/elasticsearch-2.4.6/bin/plugin install delete-by-query
   - TEST_CLUSTER_COMMAND=/tmp/elasticsearch-$ES_VERSION/bin/elasticsearch TEST_CLUSTER_LOGS=/tmp/log rake es:start
